Add record collection to the release [#97137326]

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -44,6 +44,7 @@
           'configured.network_address',
           'configured.port',
           'configured.smtp_authentication',
+          'configured.record_collection',
         ].each do |property| %>
         <p><%= "#{property}=#{p(property)}" %></p>
       <% end %>
