Add selector property to web_server spec [#97136242]

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -45,6 +45,7 @@
           'configured.port',
           'configured.smtp_authentication',
           'configured.record_collection',
+          'configured.selector',
         ].each do |property| %>
         <p><%= "#{property}=#{p(property)}" %></p>
       <% end %>
