--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -2,6 +2,7 @@
   <body>
     <h1>Hello World</h1>
     <h2>Generated values:</h2>
+    <dl>
     <% [
         'generated.rsa_cert_credentials.public_key_pem',
         'generated.rsa_cert_credentials.cert_and_private_key_pems',
@@ -17,37 +18,40 @@
         'generated.secret',
         'generated.uuid',
       ].each do |property| %>
-      <p><%= "#{property}=#{p(property)}" %></p>
+      <dt><%= property %></dt>
+      <dd><%= p(property) %></dd>
     <% end %>
-
-    <br>
+    </dl>
 
     <h2>Configured values:</h2>
-      <% [
-          'configured.string',
-          'configured.integer',
-          'configured.boolean',
-          'configured.dropdown',
-          'configured.domain',
-          'configured.wildcard_domain',
-          'configured.string_list',
-          'configured.text',
-          'configured.ldap_url',
-          'configured.email',
-          'configured.http_url',
-          'configured.ip_address',
-          'configured.ip_ranges.value',
-          'configured.ip_ranges.parsed_ip_ranges',
-          'configured.multi_select_options',
-          'configured.network_address_list.value',
-          'configured.network_address_list.parsed_network_addresses',
-          'configured.network_address',
-          'configured.port',
-          'configured.smtp_authentication',
-          'configured.record_collection',
-          'configured.selector',
-        ].each do |property| %>
-        <p><%= "#{property}=#{p(property)}" %></p>
-      <% end %>
+    <dl>
+    <% [
+        'configured.string',
+        'configured.integer',
+        'configured.boolean',
+        'configured.dropdown',
+        'configured.domain',
+        'configured.wildcard_domain',
+        'configured.string_list',
+        'configured.text',
+        'configured.ldap_url',
+        'configured.email',
+        'configured.http_url',
+        'configured.ip_address',
+        'configured.ip_ranges.value',
+        'configured.ip_ranges.parsed_ip_ranges',
+        'configured.multi_select_options',
+        'configured.network_address_list.value',
+        'configured.network_address_list.parsed_network_addresses',
+        'configured.network_address',
+        'configured.port',
+        'configured.smtp_authentication',
+        'configured.record_collection',
+        'configured.selector',
+      ].each do |property| %>
+        <dt><%= property %></dt>
+        <dd><%= p(property) %></dd>
+    <% end %>
+    </dl>
   </body>
 </html>
