--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -1,6 +1,12 @@
 <html>
   <body>
     <h1>Hello World</h1>
+
+    <h2>Persistent disk time log</h2>
+    <p>
+      <a href="/logs/time.log">/logs/time.log</a>
+    </p>
+
     <h2>Generated values:</h2>
     <dl>
     <% [
