Nginx ctl file uses `kill` instead of `kill -9` and waits for process to exit
* hopefully fixes nginx restart issues in ci [#103544564]

Signed-off-by: Aram Price <aprice@pivotal.io>

--- a/example-release/jobs/web_server/templates/ctl.erb
+++ b/example-release/jobs/web_server/templates/ctl.erb
@@ -21,9 +21,10 @@ case $1 in
     ;;
 
   stop)
-    kill -9 `cat $PIDFILE`
-
-    rm -f $PIDFILE
+    PID=$(head -1 ${PIDFILE})
+    kill ${PID}
+    while [ -e /proc/${PID} ]; do sleep 0.1; done
+    rm -f ${PIDFILE}
     ;;
 
   *)
