--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -72,6 +72,7 @@
         'ops_manager_provided_accessors.ips',
         'ops_manager_provided_accessors.availability_zone',
         'ops_manager_provided_accessors.ips_by_availability_zone',
+        'ops_manager_provided_accessors.bosh_job_partition_stats',
        ].each do |property| %>
         <dt><%= property %></dt>
         <dd><%= p(property) %></dd>
