--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -7,6 +7,7 @@ echo "Generated Values"
      'generated.rsa_pkey_credentials.public_key_pem',
      'generated.rsa_pkey_credentials.private_key_pem',
      'generated.rsa_pkey_credentials.public_key_openssh',
+     'generated.rsa_pkey_credentials.public_key_fingerprint',
      'generated.salted_credentials.sha512_hashed_password',
      'generated.salted_credentials.identity',
      'generated.salted_credentials.salt',
