--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -53,11 +53,21 @@
         'configured.network_address',
         'configured.port',
         'configured.smtp_authentication',
+        'configured.ca_certificate',
         'configured.record_collection',
         'configured.selector',
+        'configured.simple_credentials.identity',
+        'configured.simple_credentials.password',
+        'configured.secret',
+        'configured.rsa_cert_credentials.public_key_pem',
+        'configured.rsa_cert_credentials.cert_and_private_key_pems',
       ].each do |property| %>
         <dt><%= property %></dt>
-        <dd><%= p(property) %></dd>
+        <dd>
+          <% if_p(property) do |prop| %>
+            <%= prop %>
+          <% end %>
+        </dd>
     <% end %>
     </dl>
 
