--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -55,3 +55,11 @@ echo "Configured Values"
   echo "<%= property %>=<% if_p(property) do |prop| %><%= prop %><% end %>"
 <% end %>
 
+echo 'Director Provided Accessors'
+
+<% [
+     'director_provided_accessors.ntp_servers',
+     'director_provided_accessors.ca_public_key',
+   ].each do |property| %>
+  echo "<%= "#{property}=#{p(property)}" %>"
+<% end %>
