Add new property "self.stemcell_version"
Signed-off-by: Aakash Shah <ashah@pivotal.io>

--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -9,6 +9,14 @@ echo 'Product Accessors'
   echo <%= Shellwords.escape("#{property}=#{p(property)}") %>
 <% end %>
 
+echo 'Self Accessors'
+
+<% [
+       'self.stemcell_version',
+   ].each do |property| %>
+  echo <%= Shellwords.escape("#{property}=#{p(property)}") %>
+<% end %>
+
 echo "Generated Values"
 <% [
      'generated.rsa_cert_credentials.public_key_pem',
