Add missing <pre> tag [#128698623]
Signed-off-by: Matt Royal <mroyal@pivotal.io>

--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -25,7 +25,7 @@
         'generated.uuid',
       ].each do |property| %>
       <dt><%= property %></dt>
-      <dd><%= p(property) %></dd>
+      <dd><pre><%= p(property) %></pre></dd>
     <% end %>
     </dl>
 
