--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -2,7 +2,7 @@
 name: example-product
 product_version: <%= version.inspect %>
 minimum_version_for_upgrade: "1.7.0"
-metadata_version: "1.8"
+metadata_version: "1.9"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
 rank: 1
@@ -11,7 +11,7 @@ stemcell_criteria:
   os: ubuntu-trusty
   version: <%= stemcell_version.inspect %>
 
-  # allows you to opt-out of the default behaviour of Ops Manager 1.8 to always
+  # allows you to opt-out of the default behaviour of Ops Manager 1.8+ to always
   # use the latest patch update of an available stemcell version. Set to 'false'
   # to use the exact version match of the stemcell.
   #
@@ -19,8 +19,8 @@ stemcell_criteria:
   enable_patch_security_updates: true
 releases:
   - name: example-release
-    file: example-release-1.8.release14.tgz
-    version: "1.8.release14"
+    file: example-release-1.9.release20.tgz
+    version: "1.9.release20"
 
 post_deploy_errands:
   - name: example-errand
