Add variables section to product template
These are currently unused by any property
[#142862327]

Signed-off-by: Derek Richard <drichard@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -22,6 +22,12 @@ releases:
     file: <%= release_file_name.inspect %>
     version: <%= release_file_name.match(/^example-release-(.*)\.tgz$/)[1].inspect %>
 
+variables:
+  - name: var1
+    type: password
+  - name: var2
+    type: rsa
+
 post_deploy_errands:
   - name: example-errand
 
