--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -23,10 +23,8 @@ releases:
     version: <%= release_file_name.match(/^example-release-(.*)\.tgz$/)[1].inspect %>
 
 variables:
-  - name: var1
+  - name: credhub-password
     type: password
-  - name: var2
-    type: rsa
 
 post_deploy_errands:
   - name: example-errand
@@ -343,6 +341,8 @@ job_types:
       - name: example-errand
         release: example-release
         manifest: |
+          credhub:
+            password: ((( credhub-password )))
           generated:
             root_rsa_certificate: (( $ops_manager.ca_certificate ))
             http_proxy: (( $ops_manager.http_proxy ))
@@ -620,6 +620,8 @@ job_types:
       configurable: true
       optional: true
     manifest: |
+      credhub:
+        password: ((( credhub-password )))
       generated:
         root_rsa_certificate: (( $ops_manager.ca_certificate ))
         rsa_cert_credentials:
