include an example credhub property which shows string concatenation [#143334261]
Signed-off-by: Ryan Richard <rrichard@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -342,6 +342,7 @@ job_types:
         release: example-release
         manifest: |
           credhub:
+            concatenated_password: prefix-((( credhub-password )))-suffix
             password: ((( credhub-password )))
           generated:
             root_rsa_certificate: (( $ops_manager.ca_certificate ))
@@ -621,6 +622,7 @@ job_types:
       optional: true
     manifest: |
       credhub:
+        concatenated_password: prefix-((( credhub-password )))-suffix
         password: ((( credhub-password )))
       generated:
         root_rsa_certificate: (( $ops_manager.ca_certificate ))
