--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -44,6 +44,7 @@
     <dl>
       <% [
              'credhub.password',
+             'credhub.concatenated_password'
          ].each do |property| %>
         <dt><%= property %></dt>
         <dd><pre><%= p(property) %></pre></dd>
