Add any_instances accessor to example release and build new release yml [#142880389]
Signed-off-by: Caroline Taymor <ctaymor@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -686,6 +686,7 @@ job_types:
         first_ip: (( first_ip ))
         ips: (( ips ))
         ips_by_availability_zone: (( ips_by_availability_zone ))
+        any_instances: (( any_instances ))
       director_provided_accessors:
         hostname: (( $director.hostname ))
         deployment_ip: (( $director.deployment_ip ))
