--- a/example-release/jobs/web_server/templates/index.html.erb
+++ b/example-release/jobs/web_server/templates/index.html.erb
@@ -126,6 +126,7 @@
         'ops_manager_provided_accessors.first_ip',
         'ops_manager_provided_accessors.ips',
         'ops_manager_provided_accessors.ips_by_availability_zone',
+        'ops_manager_provided_accessors.any_instances',
        ].each do |property| %>
         <dt><%= property %></dt>
         <dd><%= p(property) %></dd>
