Add properties to test credhub migration in upgrades from this product
[#143464505]

Signed-off-by: Ryan Richard <rrichard@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -360,6 +360,24 @@ job_types:
               password: (( .web_server.generated_simple_credentials.password ))
             secret: (( .web_server.generated_secret.value ))
             uuid: (( .web_server.generated_uuid.value ))
+            for_migration_to_credhub:
+              rsa_cert_credentials:
+                public_key_pem: (( .web_server.generated_rsa_cert_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.public_key_pem ))
+                cert_and_private_key_pems: (( .web_server.generated_rsa_cert_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.cert_and_private_key_pems ))
+              rsa_pkey_credentials:
+                public_key_pem: (( .web_server.generated_rsa_pkey_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.public_key_pem ))
+                private_key_pem: (( .web_server.generated_rsa_pkey_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.private_key_pem ))
+                public_key_openssh: (( .web_server.generated_rsa_pkey_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.public_key_openssh ))
+                public_key_fingerprint: (( .web_server.generated_rsa_pkey_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.public_key_fingerprint ))
+              salted_credentials:
+                sha512_hashed_password: (( .web_server.generated_salted_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.sha512_hashed_password ))
+                identity: (( .web_server.generated_salted_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.identity ))
+                salt: (( .web_server.generated_salted_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.salt ))
+                password: (( .web_server.generated_salted_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.password ))
+              simple_credentials:
+                identity: (( .web_server.generated_simple_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.identity ))
+                password: (( .web_server.generated_simple_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>.password ))
+              secret: (( .web_server.generated_secret_to_migrate_to_credhub_<%= major_and_minor_version %>.value ))
           configured:
             string: (( .web_server.example_string.value ))
             integer: (( .web_server.example_migrated_integer.value ))
@@ -478,13 +496,23 @@ job_types:
       optional: true
     - name: generated_rsa_cert_credentials
       type: rsa_cert_credentials
+    - name: generated_rsa_cert_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>
+      type: rsa_cert_credentials
     - name: generated_rsa_pkey_credentials
+      type: rsa_pkey_credentials
+    - name: generated_rsa_pkey_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>
       type: rsa_pkey_credentials
     - name: generated_salted_credentials
       type: salted_credentials
+    - name: generated_salted_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>
+      type: salted_credentials
     - name: generated_simple_credentials
       type: simple_credentials
+    - name: generated_simple_credentials_to_migrate_to_credhub_<%= major_and_minor_version %>
+      type: simple_credentials
     - name: generated_secret
+      type: secret
+    - name: generated_secret_to_migrate_to_credhub_<%= major_and_minor_version %>
       type: secret
     - name: generated_uuid
       type: uuid
