--- a/example-product/migration_templates/201705060200_example_credhub_credential_migration.js.erb
+++ b/example-product/migration_templates/201705060200_example_credhub_credential_migration.js.erb
@@ -4,8 +4,8 @@ exports.migrate = function(input) {
   console.log('the properties passed to migrate are: ');
   console.log(JSON.stringify(input));
   input.variable_migrations.push({
-    from: input.properties['.web_server.generated_secret'],
-    to_variable: 'generated-secret-name-to-migrate-to-credhub'
+    from: input.properties['.web_server.generated_secret_to_migrate_to_credhub_<%= previous_major_and_minor_version %>'],
+    to_variable: 'generated-secret-migrated-to-credhub'
   });
   return input;
 };
