Add a migration to migrate an rsa pkey credential
[#143464505]

Signed-off-by: Tom Dunlap <tdunlap@pivotal.io>

--- a/example-product/migration_templates/example_credhub_credential_migration.js.erb
+++ b/example-product/migration_templates/example_credhub_credential_migration.js.erb
@@ -3,9 +3,15 @@ exports.migrate = function(input) {
   // strings.  JSON.stringify is an easy way to dump a structure.
   console.log('the properties passed to migrate are: ');
   console.log(JSON.stringify(input));
+  //migrate a secret
   input.variable_migrations.push({
     from: input.properties['.web_server.generated_secret_to_migrate_to_credhub_<%= previous_major_and_minor_version %>'],
     to_variable: 'generated-secret-migrated-to-credhub'
+  });
+  //migrate an rsa key
+  input.variable_migrations.push({
+    from: input.properties['.web_server.generated_rsa_pkey_credentials_to_migrate_to_credhub_<%= previous_major_and_minor_version %>'],
+    to_variable: 'generated-rsa-key-migrated-to-credhub'
   });
   return input;
 };
