Migrate rsa_p_key_credentials to credhub
[#143464505]

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -348,6 +348,7 @@ job_types:
             password: ((( credhub-password )))
           migrated_to_credhub:
             secret: ((( generated-secret-migrated-to-credhub )))
+            rsa: ((( generated-rsa-key-migrated-to-credhub )))
           generated:
             root_rsa_certificate: (( $ops_manager.ca_certificate ))
             http_proxy: (( $ops_manager.http_proxy ))
