--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -65,7 +65,8 @@ echo "Generated values to migrate to credhub during upgrade to the next version 
 echo "Values from credhub"
 <% [
      'migrated_to_credhub.secret',
-     'migrated_to_credhub.rsa',
+     'migrated_to_credhub.rsa.private_key',
+     'migrated_to_credhub.rsa.public_key',
    ].each do |property| %>
   echo <%= Shellwords.escape("#{property}=#{p(property)}") %>
 <% end %>
