Interpolate rsa credential from credhub.
[#143464505]

--- a/example-release/jobs/example-errand/templates/run.erb
+++ b/example-release/jobs/example-errand/templates/run.erb
@@ -65,8 +65,7 @@ echo "Generated values to migrate to credhub during upgrade to the next version 
 echo "Values from credhub"
 <% [
      'migrated_to_credhub.secret',
-     'migrated_to_credhub.rsa.private_key',
-     'migrated_to_credhub.rsa.public_key',
+     'migrated_to_credhub.rsa',
    ].each do |property| %>
   echo <%= Shellwords.escape("#{property}=#{p(property)}") %>
 <% end %>
