--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -28,7 +28,7 @@ variables:
   - name: generated-secret-migrated-to-credhub
     type: password
   - name: generated-rsa-key-migrated-to-credhub
-    type: rsa
+    type: certificate
 
 post_deploy_errands:
   - name: example-errand
