--- a/example-product/migration_templates/example_credhub_credential_migration.js.erb
+++ b/example-product/migration_templates/example_credhub_credential_migration.js.erb
@@ -13,5 +13,11 @@ exports.migrate = function(input) {
     from: input.properties['.web_server.generated_rsa_pkey_credentials_to_migrate_to_credhub_<%= previous_major_and_minor_version %>'],
     to_variable: 'generated-rsa-key-migrated-to-credhub'
   });
+
+  //migrate a simple credential
+  input.variable_migrations.push({
+    from: input.properties['.web_server.generated_simple_credentials_to_migrate_to_credhub_<%= previous_major_and_minor_version %>'],
+    to_variable: 'generated-simple-creds-migrated-to-credhub'
+  });
   return input;
 };
