Add an example of using the new $ops_manager.dns_enabled to the example product
[#149044675]

Signed-off-by: Topher Lubaway <clubaway@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -361,6 +361,7 @@ job_types:
             http_proxy: (( $ops_manager.http_proxy ))
             https_proxy: (( $ops_manager.https_proxy ))
             no_proxy: (( $ops_manager.no_proxy ))
+            dns_enabled: (( $ops_manager.dns_enabled ))
             rsa_cert_credentials:
               public_key_pem: (( .web_server.generated_rsa_cert_credentials.public_key_pem ))
               cert_and_private_key_pems: (( .web_server.generated_rsa_cert_credentials.cert_and_private_key_pems ))
@@ -663,6 +664,7 @@ job_types:
         concatenated_password: prefix-((( credhub-password )))-suffix
         password: ((( credhub-password )))
       generated:
+        dns_enabled: (( $ops_manager.dns_enabled ))
         root_rsa_certificate: (( $ops_manager.ca_certificate ))
         rsa_cert_credentials:
           public_key_pem: (( generated_rsa_cert_credentials.public_key_pem ))
